log/build_2022-03-30_14-56-55/xsens_driver/stderr.log
  File "/app/dev_ws/install/xsens_driver/lib/python3.8/site-packages/xsens_driver/xsens_measure.py", line 171
    elif
       ^
SyntaxError: invalid syntax

